--- a/Bonus/exercice.html
+++ b/Bonus/exercice.html
@@ -32,6 +32,7 @@
         </tr>
     </table>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="exercice.js"></script>
 </body>
 </html>
